added footer and fixed files

--- a/reactPortfolio/index.html
+++ b/reactPortfolio/index.html
@@ -9,10 +9,9 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-dy0n2MPEwWZT6I5YUBn0UycxVWy0epCZBWjo5xGxmA7dUV6+Q5aIW0Zw2E1iIekpU2R0cgda4DoEvxZA4V/5xw==" crossorigin="anonymous"
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"  crossorigin="anonymous">
 
-
-    <!-- MAIN CSS -->
+   
     <link rel="stylesheet" href="css/tooplate-ben-resume-style.css">
   </head>
   <body data-spy="scroll" data-target="#navbarNav" data-offset="50"></body>
